# xgen

./: Makefile.am  README  TODO  async_notes.txt  autogen.sh  configure.in  gx-0.1.pc.in  gx.pc.in  xgen-0.1.pc.in
doc/: NOTES.txt  README.txt
doc/reference/: Makefile.am
doc/reference/gx/: Makefile.am  version.xml.in
doc/reference/xgen/: Makefile.am  version.xml.in
gx/: Makefile.am  gx-connection.c  gx-connection.h  gx-cookie.c  gx-cookie.h  gx-drawable.c  gx-drawable.h  gx-gcontext.c  gx-gcontext.h  gx-main.c  gx-main.h  gx-mask-value-item.c  gx-pixmap.c  gx-pixmap.h  gx-protocol-error.c  gx-protocol-error.h  gx-screen.c  gx-screen.h  gx-types.h  gx-window.c  gx-window.h  gx.h
src/: Makefile.am  gx-connection.c  gx-connection.h  gx-cookie.c  gx-drawable.c  gx-drawable.h  gx-gcontext.c  gx-mask-value-item.h  gx-pixmap.c  gx-screen.c  gx-window.c  gx-window.h  gx.h
tests/: Makefile.am  test-async-reply.c  test-connection.c  test-cookie-life-cycle.c  test-events.c  test-gx-common.c  test-gx-main.c  test-reply.c
tests/conform/: ADDING_NEW_TESTS  Makefile.am  test-async-reply.c  test-connection.c  test-cookie-life-cycle.c  test-gerrors.c  test-gx-common.h  test-gx-main.c  test-screen-info.c  test-xgen-common.c  test-xgen-common.h  test-xgen-main.c  wrapper.sh
tools/: Makefile  Makefile.am  code_gen  code_gen.c  gx-drawable.c  gx-gcontext.c  gx-gen.c  gx-pixmap.c  gx-pixmap.h  gx-screen.h  gx-types.h  gx-window.c  gx.h  post_process.sh
xgen/: Makefile.am  xgen.c  xgen.h
